--- a/package.json
+++ b/package.json
@@ -21,14 +21,14 @@
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "react-helmet": "^5.2.1",
-    "tailwindcss": "^1.2.0"
+    "react-helmet": "^5.2.1"
   },
   "devDependencies": {
     "@types/node": "^13.9.2",
     "@types/react": "^16.9.25",
     "@types/react-dom": "^16.9.5",
-    "prettier": "^1.19.1"
+    "prettier": "^1.19.1",
+    "tailwindcss": "^1.2.0"
   },
   "keywords": [
     "gatsby"
