--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "gatsby-starter-default",
-  "private": true,
+  "private": false,
   "description": "A simple starter to get up and developing quickly with Gatsby",
-  "version": "0.1.0",
-  "author": "Kyle Mathews <mathews.kyle@gmail.com>",
+  "version": "1.0.0",
+  "author": "Jacob Neterer <jacobrneterer@gmail.com",
   "dependencies": {
     "gatsby": "^2.19.45",
     "gatsby-image": "^2.2.44",
@@ -19,8 +19,8 @@
     "gatsby-transformer-sharp": "^2.3.19",
     "node-sass": "^4.13.1",
     "prop-types": "^15.7.2",
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
     "react-helmet": "^5.2.1"
   },
   "devDependencies": {
@@ -31,7 +31,11 @@
     "tailwindcss": "^1.2.0"
   },
   "keywords": [
-    "gatsby"
+    "gatsby",
+    "sanity",
+    "tailwindcss",
+    "typescript",
+    "sass"
   ],
   "license": "MIT",
   "scripts": {
@@ -45,9 +49,9 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/gatsbyjs/gatsby-starter-default"
+    "url": "https://github.com/jneterer/gatsby-developer-portfolio"
   },
   "bugs": {
-    "url": "https://github.com/gatsbyjs/gatsby/issues"
+    "url": "https://github.com/jneterer/gatsby-developer-portfolio/issues"
   }
 }
