--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "version": "1.0.0",
   "author": "Jacob Neterer <jacobrneterer@gmail.com",
   "dependencies": {
+    "@sanity/block-content-to-react": "^2.0.7",
     "gatsby": "^2.19.45",
     "gatsby-image": "^2.2.44",
     "gatsby-plugin-manifest": "^2.2.48",
