--- a/sanity-developer-portfolio/package.json
+++ b/sanity-developer-portfolio/package.json
@@ -4,7 +4,7 @@
   "version": "1.0.0",
   "description": "",
   "main": "package.json",
-  "author": "Jacob Neterer <jacobrneterer@gmail.com>",
+  "author": "Rob",
   "license": "UNLICENSED",
   "scripts": {
     "start": "sanity start",
@@ -14,13 +14,15 @@
     "sanity"
   ],
   "dependencies": {
-    "@sanity/base": "^1.149.5",
-    "@sanity/components": "^1.149.6",
-    "@sanity/core": "^1.149.6",
-    "@sanity/default-layout": "^1.149.5",
-    "@sanity/default-login": "^1.149.0",
-    "@sanity/desk-tool": "^1.149.5",
-    "@sanity/vision": "^1.149.0",
+    "@sanity/base": "^2.6.2",
+    "@sanity/block-content-to-react": "^2.0.7",
+    "@sanity/client": "^2.2.6",
+    "@sanity/components": "^2.2.6",
+    "@sanity/core": "^2.6.2",
+    "@sanity/default-layout": "^2.6.2",
+    "@sanity/default-login": "^2.2.6",
+    "@sanity/desk-tool": "^2.6.2",
+    "@sanity/vision": "^2.2.6",
     "prop-types": "^15.6",
     "react": "^16.2",
     "react-dom": "^16.2"
